tiny markup close tag
this item has a lock tag, this is usually added automatically, but may cause problems in some versions of different browsers.
https://www.w3.org/TR/html5/sections.html#the-header-element

--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -304,6 +304,7 @@ from openedx.core.lib.courses import course_image_url
       <div class="additional-resources">
         <header>
           <h1>${_("Additional Resources")}</h1>
+        </header>
       </div>
 
         <div>
